add Andko Digital

--- a/index.html
+++ b/index.html
@@ -196,9 +196,7 @@
         <ul class="info-list info-container">
           <li class="info-list__item">Software Architecture</li>
           <li class="info-list__item">Servant Leadership</li>
-          <li class="info-list__item">Empathy</li>
-          <li class="info-list__item">Coaching</li>
-          <li class="info-list__item">Teaching</li>
+          <li class="info-list__item">Mentoring | Coaching</li>
         </ul>
       </section>
 
@@ -242,7 +240,29 @@
 
         <div class="history__content">
           <div class="history-block">
-            <p>2024-01 - 2024-09</p>
+            <p>2025-01 - Present</p>
+
+            <div>
+              <h3 class="history-block__title">Senior Software Engineer</h3>
+
+              <div class="history-block__subtitle">
+                <p>Andko Digital, Athens</p>
+              </div>
+
+              <div class="history-block__content">
+                <div>
+                  <ul>
+                    <!-- <li class="list-item--disc">
+                      Stay tuned!
+                    </li> -->
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="history-block">
+            <p>2024-01 - 2024-12</p>
 
             <div>
               <h3 class="history-block__title">
@@ -384,7 +404,7 @@
                 <p>KORELKO Distance</p>
               </div>
 
-              <div class="history-block__content">
+              <!-- <div class="history-block__content">
                 <div>
                   <ul>
                     <li class="list-item--disc">
@@ -399,7 +419,7 @@
                     <li class="list-item--disc">Rewrite the curriculum</li>
                   </ul>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
